--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run test",
     "watch:test": "npm t -- --watch",
     "test": "jest",
+    "lint": "node_modules/.bin/eslint src",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files --out-dir dist --ignore *.test.js src",
@@ -34,6 +35,7 @@
   "homepage": "",
   "devDependencies": {
     "babel-cli": "6.7.5",
+    "babel-eslint": "7.2.3",
     "babel-jest": "^17.0.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
@@ -41,7 +43,12 @@
     "babel-register": "6.7.2",
     "chai": "3.5.0",
     "codecov": "1.0.1",
-    "eslint": "^3.14.1",
+    "eslint": "3.19.0",
+    "eslint-config-airbnb": "15.0.1",
+    "eslint-import-resolver-webpack": "0.8.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.1.0",
     "ghooks": "1.2.1",
     "jest": "^17.0.3",
     "mocha": "2.4.5",
@@ -52,7 +59,7 @@
   },
   "config": {
     "ghooks": {
-      "pre-commit": "npm run check-coverage"
+      "pre-commit": "npm run test"
     }
   },
   "babel": {
